fix focus from getting cut off

--- a/src/client/components/organisms/results/results.scss
+++ b/src/client/components/organisms/results/results.scss
@@ -39,10 +39,17 @@
 
 .searchInfoPanel {
   background-color: white;
-  padding: 14px 20px 0;
+  padding: 14px 20px 20px;
   @include grid-media($sba-grid-small) {
     padding-bottom: 20px;
   }
+  @include grid-media($sba-grid-medium) {
+    padding-bottom: 20px;
+  }
+}
+
+.searchFocusState {
+  line-height: 1;
 }
 
 .searchFocusState:focus {
